# AutoAnki

./: README.md  config.py  env.template  example_api_usage.py  llm_adapters.py  plot_langgraph.py  pyproject.toml  start_server.py  test_system.py
agents/: __init__.py  card_generator_agent.py  langgraph_orchestrator.py  llm_agent.py  supervisor_agent.py  topic_research_agent.py  utils.py
anki_integration/: __init__.py  anki_api.py  utils.py
backend/: __init__.py  main.py
frontend/: __init__.py  app.py
