[tool.poetry]
name = "autoanki"
version = "0.1.0"
description = "LLM-powered webapp to interact with Anki via MCP, LangGraph, LangChain, FastAPI, Streamlit, and Ollama."
authors = ["Your Name <your.email@example.com>"]

# Specify the source code packages for Poetry
packages = [
    { include = "backend" },
    { include = "frontend" },
    { include = "agents" },
    { include = "anki_integration" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "*"
uvicorn = "*"
langchain = "*"
langgraph = "^0.5.1"
ollama = "*"
streamlit = "*"
httpx = "*"
pydantic = "*"
langchain-community = "^0.3.27"
langchain-ollama = "^0.3.3"
graphviz = "^0.21"
ipython = "<9"
# Hugging Face integration
huggingface-hub = "*"
transformers = "*"
torch = "*"
python-dotenv = "*"
requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
